chore: 修改包名为 open-skill-manager
npm 包名规范要求小写，使用连字符命名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openskillmanager",
+  "name": "open-skill-manager",
   "version": "1.0.0",
   "description": "OpenSkillManager (osm) - AI Agent Skill 包管理器",
   "main": "src/index.js",
