--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.5.25"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.2.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "autoprefixer": "^10.4.27",
     "lucide-vue-next": "^0.575.0",
